--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a index html file</p>
+    <p>This is a index html file. This is a updated index file</p>
 </body>
 </html>
